Fixed shield spacing and proportionality

--- a/src/App.css
+++ b/src/App.css
@@ -171,21 +171,22 @@ a {
 
 .shield-container {
   display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 10px;
   flex-wrap: wrap;
-  justify-content: first baseline;
-  gap: 2%;
   box-sizing: border-box;
 }
 
 .shield {
-  width: 120%;
-  height: auto;
+  width: 100%;
+  height: 35px;
   margin: 0;
 }
 
 .shield-component {
-  margin-bottom: 5px;
-  padding: none;
+  padding: 0;
+  width: fit-content;
 }
 
 .contact-section {
@@ -193,7 +194,7 @@ a {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  margin-top: 10%;
+  margin-top: 15%;
   align-items: flex-start; /* aligsn item so start at top of flex box*/
   margin-bottom: 50%;
 }
@@ -237,7 +238,7 @@ input {
 
 ::placeholder {
   font-family: Barlow;
-  font-size: 18px;
+  font-size: 16px;
   color: #d9d9d9;
 }
 
@@ -286,7 +287,7 @@ input {
   font-size: 150%;
   font-weight: 400;
   margin-left: 5%;
-  margin-right: -17%;
+  margin-right: -2%;
   margin-top: 20px;
   width: auto;
   white-space: nowrap;
@@ -303,8 +304,13 @@ h1 {
   color: #d9d9d9;
   margin-top: 2.5%;
   white-space: normal;
-  font-size: 20px;
+  font-size: 22px;
   font-family: League Spartan;
   font-weight: 400;
   padding-right: 80px;
+}
+
+.adjust {
+  height: 5px;
+  width: 650px;
 }
